# Embedded_Linux

Day3/: Makefile  kernel_modul.c
Day4/: prototype1.c  prototype2.c  prototype3.c  test2  test3  test4
Day4/gpio-libgpiod/: CMakeLists.txt  README.md  libgpiod.c  main.c
Day4/gpio-libgpiod/make/: CMakeCache.txt  Makefile  cmake_install.cmake  gpio_threads_demo
Day6/: Ascii-Bild1.txt  Ascii-Bild2.txt  No_Mu  No_Mu_Reader.c  No_Mu_Writer.c  No_Mutex.c  O  W
